[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="StartServerButton" type="Button" parent="."]
margin_left = 457.019
margin_top = 221.651
margin_right = 542.019
margin_bottom = 241.651
text = "Start Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartClientButton" type="Button" parent="."]
margin_left = 457.019
margin_top = 316.231
margin_right = 539.019
margin_bottom = 336.231
text = "Start Client"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 427.166
margin_top = 370.166
margin_right = 576.166
margin_bottom = 410.166
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartServerButton" to="." method="_on_StartServerButton_pressed"]
[connection signal="pressed" from="StartClientButton" to="." method="_on_StartClientButton_pressed"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
